# prog_conc_lab3

./: CMakeLists.txt  README.md  displaymandel.cpp  helpers.h  job.h  main.cpp  master.cpp  master.h  sem.cpp  sem.h  tests.h  worker.cpp  workerbase.cpp  workerbase.h  workerthread.cpp  workerthread.h
Pthread/: CMakeLists.txt  displaymandel.h  helpers.h  job.cpp  main.cpp  master.cpp  master.h  worker.h  workerbase.cpp  workerbase.h
